--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ DATABASE_PASSWORD=""
 DATABASE_NAME=""
 DATABASE_SYNCHRONIZE=false
 DATABASE_LOGGING=false
+
+ACCESS_TOKEN_SECRET="accessTokenSecretKey"
+ACCESS_TOKEN_EXPIRES_IN="7d"
+REFRESH_TOKEN_SECRET="refreshTokenSecretKey"
+REFRESH_TOKEN_EXPIRES_IN="30d"
